@@ -1,3 +1,8 @@
+2009-07-18  Derek R. Price  <derek@ximbiot.com>
+
+	* subr.c (sleep_past): Don't assume that time() called after
+	gettimeofday() must return a seconds value >= than gettimeofday() did.
+
 2008-11-19  Larry Jones  <lawrence.jones@siemens.com>
 
 	* entries.c (WriteTag): Remove any exiting file and recreate
